--- a/build
+++ b/build
@@ -1,8 +1,16 @@
 #!/bin/bash
 
+## Builds the ./install-nodejs-and-pm2 file from src/
+
 set -e
 
 DIR=$(dirname $0)
+SOURCE_FILE="${DIR}/src/install-nodejs-and-pm2"
+TARGET_FILE="${DIR}/install-nodejs-and-pm2"
+ECOSYSTEM_CONFIG_JS_FILE="${DIR}/src/apps/ecosystem.config.js"
 
-ECOSYSTEM_CONFIG_JS=$(<${DIR}/src/apps/ecosystem.config.js)
-envsubst < ${DIR}/src/install-nodejs-and-pm2 > ${DIR}/install-nodejs-and-pm2
+export ECOSYSTEM_CONFIG_JS_1="$(<${ECOSYSTEM_CONFIG_JS_FILE})"
+export ECOSYSTEM_CONFIG_JS_2="${ECOSYSTEM_CONFIG_JS_1//\`/BACKTICK}"
+export ECOSYSTEM_CONFIG_JS_3="${ECOSYSTEM_CONFIG_JS_2//\"/\\\"}"
+export ECOSYSTEM_CONFIG_JS="${ECOSYSTEM_CONFIG_JS_3//\$/\\$}"
+envsubst '$ECOSYSTEM_CONFIG_JS' < "${SOURCE_FILE}" > "${TARGET_FILE}"
