Parse backticks cleaner.

--- a/build
+++ b/build
@@ -10,7 +10,7 @@ TARGET_FILE="${DIR}/install-nodejs-and-pm2"
 ECOSYSTEM_CONFIG_JS_FILE="${DIR}/src/apps/ecosystem.config.js"
 
 export ECOSYSTEM_CONFIG_JS_1="$(<${ECOSYSTEM_CONFIG_JS_FILE})"
-export ECOSYSTEM_CONFIG_JS_2="${ECOSYSTEM_CONFIG_JS_1//\`/BACKTICK}"
+export ECOSYSTEM_CONFIG_JS_2="${ECOSYSTEM_CONFIG_JS_1//\`/\\\`}"
 export ECOSYSTEM_CONFIG_JS_3="${ECOSYSTEM_CONFIG_JS_2//\"/\\\"}"
 export ECOSYSTEM_CONFIG_JS="${ECOSYSTEM_CONFIG_JS_3//\$/\\$}"
 envsubst '$ECOSYSTEM_CONFIG_JS' < "${SOURCE_FILE}" > "${TARGET_FILE}"
