--- a/test/ubuntu/18.04/Dockerfile
+++ b/test/ubuntu/18.04/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:18.04
 MAINTAINER Hugo Josefson <hugo@josefson.org> (https://www.hugojosefson.com/)
 
-RUN echo "Ubuntu packages updated 2018-05-10T08:34:29.697Z"
+RUN echo "Packages updated 2018-05-10."
 RUN apt update && apt dist-upgrade -y --purge
-RUN apt install -y curl procps tree
+RUN apt install -y curl tree
 
 ## Install Node.js and pm2
 COPY install-nodejs-and-pm2 .
