--- a/test/ubuntu/18.04/Dockerfile
+++ b/test/ubuntu/18.04/Dockerfile
@@ -11,15 +11,15 @@ RUN chmod +x install-nodejs-and-pm2
 RUN ./install-nodejs-and-pm2
 
 ## Copy examples from project dir
-COPY example/apps /var/lib/nodejs/apps
+COPY example/apps /var/nodejs/apps
 
 ## Copy examples from Github
 #RUN su - nodejs -c "curl -sS -L https://api.github.com/repos/hugojosefson/install-nodejs-and-pm2/tarball/master \
-#      | tar xzv --strip-components=2 --wildcards '*/example' -C /var/lib/nodejs"
+#      | tar xzv --strip-components=2 --wildcards '*/example' -C /var/nodejs"
 
 ## Set and show correct permissions and nodejs ownership of its files
-RUN chown -R nodejs:nodejs /var/lib/nodejs/apps
-RUN ls -lF /var/lib/nodejs/apps
+RUN chown -R nodejs:nodejs /var/nodejs/apps
+RUN ls -lF /var/nodejs/apps
 
 ## Show the directory structure
-RUN tree /var/lib/nodejs
+RUN tree /var/nodejs
